--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script src="https://jonasalmeida.github.io/jmat/jmat.js"></script>
-<!-- <script src="https://mathbiol.github.io/openHealth/openHealth.js"></script> -->
-<script src="http://localhost:8000/openHealth/openHealth.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js"></script>
+<script src="https://mathbiol.github.io/openHealth/openHealth.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js"></script>-->
 <script src="https://www.google.com/jsapi"></script>
 <script src="https://square.github.io/crossfilter/crossfilter.v1.min.js"></script>
 <script src="https://dc-js.github.io/dc.js/js/dc.js"></script>
