--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script src="https://jonasalmeida.github.io/jmat/jmat.js"></script>
 <script src="https://mathbiol.github.io/openHealth/openHealth.js"></script>
-<!-- <script src="http://localhost:8000/openHealth/openHealth.js"></script>-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js"></script>
+<!-- <script src="http://localhost:8000/openHealth/openHealth.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js"></script>-->
+<script src="d3.min.js"></script>
 <script src="https://www.google.com/jsapi"></script>
 <script src="https://square.github.io/crossfilter/crossfilter.v1.min.js"></script>
 <script src="https://dc-js.github.io/dc.js/js/dc.js"></script>
